--- a/application/ingress.yaml
+++ b/application/ingress.yaml
@@ -7,7 +7,7 @@ metadata:
 spec:
   ingressClassName: treafik-traefik
   rules:
-    - host: ww.dreggystore.com
+    - host: www.dreggystore.com
       http:
         paths:
           - path: /app
