--- a/application/ingress.yaml
+++ b/application/ingress.yaml
@@ -7,8 +7,7 @@ metadata:
 spec:
   ingressClassName: treafik-traefik
   rules:
-    - host: www.dreggystore.com
-      http:
+    - http:
         paths:
           - path: /app
             pathType: Exact
