--- a/application/ingress.yaml
+++ b/application/ingress.yaml
@@ -9,7 +9,7 @@ spec:
   rules:
     - http:
         paths:
-          - path: /app
+          - path: /
             pathType: Exact
             backend:
               service:
