--- a/application/ingress.yaml
+++ b/application/ingress.yaml
@@ -7,7 +7,8 @@ metadata:
 spec:
   ingressClassName: treafik-traefik
   rules:
-    - http:
+   - host: www.dreggystore.com
+     http:
         paths:
           - path: /
             pathType: Exact
