--- a/application/ingress.yaml
+++ b/application/ingress.yaml
@@ -11,6 +11,7 @@ spec:
      http:
         paths:
           - path: /application
+            pathType: Prefix
             backend:
               service:
                 name:  web-svc
