--- a/application/ingress.yaml
+++ b/application/ingress.yaml
@@ -9,7 +9,7 @@ spec:
     - host: www.dreggystore.com
       http:
         paths:
-          - path: /app
+          - path: /
             pathType: Prefix
             backend:
               service:
