--- a/application/ingress.yaml
+++ b/application/ingress.yaml
@@ -12,7 +12,7 @@ spec:
     - host: www.dreggystore.com
       http:
         paths:
-          - path: /demo
+          - path: /
             pathType: Prefix
             backend:
               service:
