--- a/application/ingress.yaml
+++ b/application/ingress.yaml
@@ -9,10 +9,17 @@ spec:
     - host: www.dreggystore.com
       http:
         paths:
-          - path: /
+          - path: /web
             pathType: Exact
             backend:
               service:
                 name:  websvc
+                port:
+                  number: 80
+          - path: /app
+            pathType: Exact
+            backend:
+              service:
+                name:  appsvc
                 port:
                   number: 80
