--- a/application/app.yaml
+++ b/application/app.yaml
@@ -1,13 +1,3 @@
-apiVersion: v1
-kind: Namespace
-metadata:
-  creationTimestamp: null
-  name: backend
-spec: {}
-status: {}
-
----
-
 apiVersion: apps/v1
 kind: Deployment
 metadata:
@@ -15,7 +5,7 @@ metadata:
   labels:
     app: app
   name: app
-  namespace: backend
+  namespace: frontend
 spec:
   replicas: 2
   selector:
@@ -43,7 +33,7 @@ metadata:
   labels:
     app: app
   name: appsvc
-  namespace: backend
+  namespace: frontend
 spec:
   ports:
   - port: 80
