--- a/application/ingress.yaml
+++ b/application/ingress.yaml
@@ -9,6 +9,13 @@ spec:
     - host: www.dreggystore.com
       http:
         paths:
+          - path: /
+            pathType: Exact
+            backend:
+              service:
+                name:  websvc
+                port:
+                  number: 80
           - path: /web
             pathType: Exact
             backend:
