--- a/application/ingress.yaml
+++ b/application/ingress.yaml
@@ -1,26 +1,27 @@
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
-  name: foo
+  name: ingress-1
   namespace: frontend
-
+  annotations:
+    nginx.ingress.kubernetes.io/rewrite-target: /
 spec:
+  ingressClassName: nginx
   rules:
-    - host: www.dreggystore.com
-      http:
-        paths:
-          - path: /web
-            pathType: Exact
-            backend:
-              service:
-                name:  websvc
-                port:
-                  number: 80
-          - path: /app
-            pathType: Exact
-            backend:
-              service:
-                name:  appsvc
-                port:
-                  number: 80
-                 
+  - host: www.dreggystore.com
+    http:
+      paths:
+      - path: /web
+        pathType: Prefix
+        backend:
+          service:
+            name: websvc
+            port:
+              number: 80
+      - path: /app
+        pathType: Prefix
+        backend:
+          service:
+            name: appsvc
+            port:
+              number: 80
