--- a/application/ingress.yaml
+++ b/application/ingress.yaml
@@ -2,11 +2,14 @@ apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   name: ingress-1
-  namespace: frontend
   annotations:
-    nginx.ingress.kubernetes.io/rewrite-target: /
+    cert-manager.io/cluster-issuer: letsencrypt-staging
 spec:
   ingressClassName: nginx
+  tls:
+  - hosts:
+    - www.dreggystore.com
+    secretName: letsencrypt-staging
   rules:
   - host: www.dreggystore.com
     http:
