--- a/application/ingress.yaml
+++ b/application/ingress.yaml
@@ -2,6 +2,7 @@ apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   name: ingress-1
+  namespace: frontend
   annotations:
     cert-manager.io/cluster-issuer: letsencrypt-staging
 spec:
