--- a/application/ingress.yaml
+++ b/application/ingress.yaml
@@ -7,6 +7,7 @@ metadata:
     kubernetes.io/ingress.class: traefik
     traefik.ingress.kubernetes.io/rewrite-target: /
 spec:
+  ingressClassName: traefik
   rules:
     - host: www.dreggystore.com
       http:
