--- a/application/ingress.yaml
+++ b/application/ingress.yaml
@@ -12,17 +12,11 @@ spec:
     - host: www.dreggystore.com
       http:
         paths:
-        - path: /*
+        - path: /
           pathType: Prefix
           backend:
             service:
               name: websvc
               port:
                 number: 80
-        - path: /app
-          pathType: Prefix
-          backend:
-            service:
-              name: appsvc
-              port:
-                number: 80
+
