--- a/application/ingress.yaml
+++ b/application/ingress.yaml
@@ -12,7 +12,7 @@ spec:
     - host: www.dreggystore.com
       http:
         paths:
-        - path: /
+        - path: /web
           pathType: Prefix
           backend:
             service:
