--- a/application/ingress.yaml
+++ b/application/ingress.yaml
@@ -19,4 +19,11 @@ spec:
               name: websvc
               port:
                 number: 80
+        - path: /app
+          pathType: Prefix
+          backend:
+            service:
+              name: appsvc
+              port:
+                number: 80
 
