--- a/application/ingress.yaml
+++ b/application/ingress.yaml
@@ -3,8 +3,10 @@ kind: Ingress
 metadata:
   name: ingress-1
   namespace: frontend
+  annotations:
+    kubernetes.io/ingress.class: traefik
+    traefik.ingress.kubernetes.io/rewrite-target: /
 spec:
-  ingressClassName: traefik
   rules:
     - host: www.dreggystore.com
       http:
