--- a/application/ingress.yaml
+++ b/application/ingress.yaml
@@ -22,7 +22,7 @@ metadata:
   namespace: frontend
   annotations:
     kubernetes.io/ingress.class: traefik
-    traefik.ingress.kubernetes.io/rewrite-target: /
+    traefik.ingress.kubernetes.io/router.middlewares: ingress-mw-admin@kubernetescrd
 spec:
   ingressClassName: traefik
   rules:
