--- a/application/app.yaml
+++ b/application/app.yaml
@@ -5,7 +5,7 @@ metadata:
   labels:
     app: app
   name: app
-  namespace: frontend
+  namespace: app
 spec:
   replicas: 1
   selector:
@@ -33,7 +33,7 @@ metadata:
   labels:
     app: app
   name: appsvc
-  namespace: frontend
+  namespace: app
 spec:
   ports:
   - port: 80
@@ -43,3 +43,41 @@ spec:
     app: app
 status:
   loadBalancer: {}
+  
+---
+
+apiVersion: traefik.containo.us/v1alpha1
+kind: Middleware
+metadata:
+  name: mw-admin
+  namespace: app
+spec:
+  stripPrefix:
+    forceSlash: false
+    prefixes:
+      - /app
+
+---
+
+apiVersion: networking.k8s.io/v1
+kind: Ingress
+metadata:
+  name: ingress-1
+  namespace: app
+  annotations:
+    kubernetes.io/ingress.class: traefik
+    traefik.ingress.kubernetes.io/router.middlewares: app-mw-admin@kubernetescrd
+spec:
+  ingressClassName: traefik
+  rules:
+    - host: www.dreggystore.com
+      http:
+        paths:
+          - path: /app
+            pathType: Prefix
+            backend:
+              service:
+                name:  appsvc
+                port:
+                  number: 80
+
