--- a/application/web.yaml
+++ b/application/web.yaml
@@ -80,3 +80,7 @@ spec:
                 name:  websvc
                 port:
                   number: 80
+  tls:
+  - hosts:
+    - www.dreggystore.com
+    secretName: websecret
