--- a/application/app.yaml
+++ b/application/app.yaml
@@ -79,4 +79,8 @@ spec:
                 name:  appsvc
                 port:
                   number: 80
+  tls:
+  - hosts:
+    - www.dreggystore.com
+    secretName: appsecret
 
